# pbdp

./: .gitignore  LICENSE  MSM_Faraday_Battery_Data_Importer.ipynb  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py  testscript.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test_on_push.yml
classes/: parser.py
docs/: conf.py  index.rst
examples/notebooks/: Data_Importer_Pre_processing_Example.ipynb  Data_Importer_Processing_Example_(Segmenting).ipynb  MSM_Faraday_Battery_Data_Importer.ipynb
examples/scripts/: basic_example.py  example.py
modules/: plots.py  save.py  segment.py  states.py
pbdp/: __init__.py  pbdp_logger.py  pbdp_parser.py  plots.py  save.py  segment.py  states.py  test.py
pbdp/input/data/: Maccor.csv  Novonix.csv
src/: __init__.py  parser.py  pbdp_parser.py  plots.py  save.py  segment.py  states.py  test.py
src/input/data/: Gamry.DTA
tests/integration/: test_parser.py
tests/unit/: test_parser.py
