[build-system]
requires = [
    "hatchling>=1.6.0",
]
build-backend = "hatchling.build"

[project]
name = "pbdp"
description = "A package for processing experimental data for batteries. Under development."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Alexnadru Pascu, Ferran Brosa Planella, W. Dhammika Widanage, Philip Grylls", email = "Ferran.Brosa-Planella@warwick.ac.uk" },
]
dependencies = [
    "pandas",
    "numpy",
    "chardet",
    "openpyxl",
    "plotly",
    "ipykernel",
    "pyarrow",
    "jupyter_client",
    "jupyter_core",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "nox",
    "coverage",
    "black",
    "flake8>=3",
    "pytest",
]
docs = [
    "guzzle-sphinx-theme",
    "sphinx>=1.5",
    "sphinx-rtd-theme",
]
deploy = [
    "bump2version"
]

[tool.hatch.version]
path = "pbdp/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pbdp",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
